# triple_barrier

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
docs/: ADR.md  EDA.ipynb  POC.ipynb  TODO.md  analyze_trades-long.ipynb  analyze_trades-short.ipynb  analyze_trades.ipynb  models.drawio  models.md  plot-method-tests.ipynb  test-cases-for-multibox-barrier.ipynb  test-triple-barrier-plotting.ipynb  test_plot_triple_barrier.ipynb
docs/examples/: Apply Scenarios.ipynb  Plot wrapper.ipynb  single trade_scenario.ipynb  strategy.py
tests/data/: EURUSD_1 Min_Ask_2024.03.13_2024.03.13.csv  EURUSD_1 Min_Bid_2024.03.13_2024.03.13.csv  issue-index-out-of-range-dataset.csv
tests/test_utils/: dummy_strategy.py
tests/triple_barrier/: conftest.py  test_dynamic_barrier_happy_path.py  test_plots_happy_path.py  test_stop_loss_error_path.py  test_take_profit_error_path.py  test_triple_barrier_happy_path.py
tests/triple_barrier/integration/: conftest.py  test_triple_barrier_apply_happy_path.py
tests/triple_barrier/unit/: conftest.py  pytest.ini  test_apply_happy_path.py  test_dynamic_barrier_happy_path.py  test_multibarrier_box_happy_path.py  test_plots_happy_path.py  test_stop_loss_happy_path.py  test_take_profit_happy_path.py  test_time_barrier_happy_path.py  test_triple_barrier_happy_path.py
triple_barrier/: constants.py  multi_barrier_box.py  multi_barrier_types.py  orders.py  plots.py  trade_labeler.py  trade_labeling.py  trading.py  triple_barrier.py  types.py
